# ai-jie

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: technical_report.md  v2_architecture_brainstorm.md
eval_results/: batch_audit_v33.md  batch_sample_eval_opus4_6.md
eval_results/20260329_055954_v1/: extractions.jsonl  failures.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_060725_v2/: extractions.jsonl  metadata.json  report.json  sample.jsonl  scores.jsonl
eval_results/20260329_061955_v3/: extractions.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_063302_v4/: extractions.jsonl  metadata.json  report.json  scores.jsonl
eval_results/20260329_065152_v5/: extractions.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_092358_v6/: extractions.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_093118_v7/: extractions.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_093958_v8/: extractions.jsonl  metadata.json  prompt.txt  report.json  scores.jsonl
eval_results/20260329_094956_v8b/: extractions.jsonl  metadata.json  report.json  scores.jsonl
eval_results/20260329_100516_v9/: extractions.jsonl  metadata.json  report.json  scores.jsonl
eval_results/20260329_101545_v9b/: extractions.jsonl  metadata.json  report.json  sample.jsonl  scores.jsonl
eval_results/evals/: trend.csv  (+1 more)
src/: config.py
tests/: test_pipeline_checkpoint.py  test_postprocess.py
(+225 files in other folders)
