[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-jie"
version = "1.0.0"
description = "Automated Job Information Extraction — structured extraction pipeline for job postings"
requires-python = ">=3.13"

dependencies = [
    "openai==2.30.0",
    "instructor==1.14.5",
    "pydantic==2.12.5",
    "pandas==3.0.1",
    "numpy==2.4.3",
    "tqdm==4.67.3",
    "python-dotenv==1.2.2",
    "huggingface-hub==1.8.0",
    "datasets==4.8.4",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]
notebooks = [
    "nest-asyncio==1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
